Fix footer padding on small

--- a/styles/footer.sass
+++ b/styles/footer.sass
@@ -1,11 +1,13 @@
 .footer
 	text-align: center
+	padding-top: 1rem
+	padding-bottom: 6rem
+	+small
+		padding-bottom: 3rem
 	ul
 		margin: 0px
 		padding: 0px
 		list-style: none
-		padding-top: 1rem
-		padding-bottom: 6rem
 		li
 			display: inline-block
 			a
